--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pytest = "~=7.1"
-pytest-mock = "~=3.8"
-pre-commit = "~=2.20"
+pytest = "*"
+pytest-mock = "*"
+pre-commit = "*"
 boto3 = "~=1.24"
-coverage = "~=7.3"
+coverage = "*"
 
 [packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.12"
