Remove the ApiGateway endpoint (#30)
* Remove the ApiGateway endpoint

The HTTP endpoint for triggering the lambda is being flagged for lack of
logging. The endpoint was used for testing and has not been useful in
production. Remove it entirely.

* environment updates

* Replace pre-commit workflow with pre-commit external check

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,16 +6,6 @@ on:
   workflow_call:
 
 jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-      - uses: pre-commit/action@v3.0.0
-
   pytest:
     runs-on: ubuntu-latest
     steps:
@@ -23,13 +13,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.12
       - run: pip install -U pipenv
-      - run: pipenv install --dev
+      - run: pipenv sync --dev
       - run: pipenv run coverage run -m pytest tests/ -svv
+      - run: pipenv run coverage lcov
       - name: upload coverage to coveralls
         uses: coverallsapp/github-action@v2
         with:
+          file: coverage.lcov
           fail-on-error: false
 
   sam-build-and-lint:
